# MineAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  SECURITY.md
apps/mineia-launcher/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/mineia-launcher/src/: App.tsx  api.ts  styles.css
apps/mineia-launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/mineia-launcher/src-tauri/src/: main.rs
crates/mineia-auth/: Cargo.toml
crates/mineia-auth/src/: lib.rs
crates/mineia-core/: Cargo.toml
crates/mineia-core/src/: hashes.rs  lib.rs  paths.rs  profiles.rs  store.rs
crates/mineia-modpacks/: Cargo.toml
crates/mineia-modpacks/src/: lib.rs
crates/mineia-runtime/: Cargo.toml
crates/mineia-runtime/src/: lib.rs
docs/: TOOLS.md
scripts/: build-release.ps1  check.ps1  serve-dist.mjs  start-dev.cmd
tools/: clean.mjs
