[workspace]
resolver = "2"
members = [
  "apps/mineia-launcher/src-tauri",
  "crates/mineia-auth",
  "crates/mineia-core",
  "crates/mineia-modpacks",
  "crates/mineia-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MineIA contributors"]
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
directories = "6"
hex = "0.4"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = "0.61"
zip = { version = "4", default-features = false, features = ["deflate"] }
