[package]
name = "mineia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
directories.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
mineia-auth = { path = "../mineia-auth" }
thiserror.workspace = true
